ucxclient-wrapper/ucxclient_wrapper_generated.h

/* Forward declaration */
typedef struct ucx_instance ucx_instance_t;
int32_t ucx_gatt_server_DescriptorDefine5(ucx_instance_t *inst, const uint8_t * uuid, int32_t uuid_len, uGattServerReadSecurity_t read_security, uGattServerWriteSecurity_t write_security, const uint8_t * value, int32_t value_len, int32_t max_length, int32_t * pDescHandle);
int32_t ucx_gatt_server_ServiceActivate(ucx_instance_t *inst);
int32_t ucx_gatt_server_ReadReqResponse(ucx_instance_t *inst, int32_t conn_handle, const uint8_t * value, int32_t value_len);
int32_t ucx_gatt_server_SendNotification(ucx_instance_t *inst, int32_t conn_handle, int32_t char_handle, const uint8_t * value, int32_t value_len);
int32_t ucx_gatt_server_SendIndication(ucx_instance_t *inst, int32_t conn_handle, int32_t char_handle, const uint8_t * value, int32_t value_len);
int32_t ucx_gatt_server_SetAttrValue(ucx_instance_t *inst, int32_t attr_handle, const uint8_t * value, int32_t value_len);
int32_t ucx_gatt_server_ReadReqError(ucx_instance_t *inst, int32_t conn_handle, const uint8_t * error_code, int32_t error_code_len);
int32_t ucx_gatt_server_WriteReqError(ucx_instance_t *inst, int32_t conn_handle, const uint8_t * error_code, int32_t error_code_len);
int32_t ucx_gatt_server_WriteReqResponse(ucx_instance_t *inst, int32_t conn_handle);
int32_t ucx_gatt_server_SendServiceChangedInd(ucx_instance_t *inst, int32_t conn_handle, int32_t start_handle, int32_t end_handle);
void ucx_gatt_server_RegisterNotification(ucx_instance_t *inst, uUEBTGCW_t callback);
void ucx_gatt_server_RegisterReadAttribute(ucx_instance_t *inst, uUEBTGRR_t callback);
void ucx_gatt_server_RegisterIndicationAck(ucx_instance_t *inst, uUEBTGIC_t callback);
/* ========== GENERAL FUNCTIONS ========== */
int32_t ucx_general_Attention(ucx_instance_t *inst);
bool ucx_general_GetManufacturerIdentificationBegin(ucx_instance_t *inst, const char * * ppManufacturer);
bool ucx_general_GetDeviceModelIdentificationBegin(ucx_instance_t *inst, const char * * ppDeviceModel);
bool ucx_general_GetSoftwareVersionBegin(ucx_instance_t *inst, const char * * ppVersion);
bool ucx_general_GetSerialNumberBegin(ucx_instance_t *inst, const char * * ppSerialNumber);
bool ucx_general_GetIdentInfoBegin(ucx_instance_t *inst, uCxGeneralGetIdentInfo_t * pGeneralGetIdentInfoRsp);
bool ucx_general_GetTypeCodeBegin(ucx_instance_t *inst, const char * * ppTypeCode);
int32_t ucx_general_SetGreetingText1(ucx_instance_t *inst, uGeneralGreetingMode_t greeting_mode);
int32_t ucx_general_SetGreetingText2(ucx_instance_t *inst, uGeneralGreetingMode_t greeting_mode, const char * text);
bool ucx_general_GetGreetingTextBegin(ucx_instance_t *inst, uCxGeneralGetGreetingText_t * pGeneralGetGreetingTextRsp);
void ucx_general_RegisterStartup(ucx_instance_t *inst, uSTARTUP_t callback);
/* ========== HTTP FUNCTIONS ========== */
int32_t ucx_http_SetConnectionParams2(ucx_instance_t *inst, int32_t session_id, const char * host);
int32_t ucx_http_SetConnectionParams3(ucx_instance_t *inst, int32_t session_id, const char * host, int32_t port);
int32_t ucx_http_SetTLS2(ucx_instance_t *inst, int32_t session_id, uWifiTlsVersion_t tls_version);
int32_t ucx_http_SetTLS3(ucx_instance_t *inst, int32_t session_id, uWifiTlsVersion_t tls_version, const char * ca_name);
int32_t ucx_http_SetTLS5(ucx_instance_t *inst, int32_t session_id, uWifiTlsVersion_t tls_version, const char * ca_name, const char * client_cert_name, const char * client_key_name);
bool ucx_http_GetTLSBegin(ucx_instance_t *inst, int32_t session_id, uCxHttpGetTLS_t * pHttpGetTLSRsp);
int32_t ucx_http_Disconnect(ucx_instance_t *inst, int32_t session_id);
bool ucx_http_GetHeader1Begin(ucx_instance_t *inst, int32_t session_id, uCxHttpGetHeader_t * pHttpGetHeaderRsp);
bool ucx_http_GetHeader2Begin(ucx_instance_t *inst, int32_t session_id, int32_t data_length, uCxHttpGetHeader_t * pHttpGetHeaderRsp);
int32_t ucx_http_GetBody(ucx_instance_t *inst, int32_t session_id, int32_t data_length, uint8_t * pDataBuf, int32_t * pMoreToRead);
int32_t ucx_http_AddHeaderField(ucx_instance_t *inst, int32_t session_id, const char * field_name, const char * field_value);
int32_t ucx_http_SetCustomHeader(ucx_instance_t *inst, int32_t session_id, const char * header_data);
int32_t ucx_http_ClearHeaderCustom(ucx_instance_t *inst, int32_t session_id);
int32_t ucx_http_SetRequestPath(ucx_instance_t *inst, int32_t session_id, const char * path);
bool ucx_http_GetRequestPathBegin(ucx_instance_t *inst, int32_t session_id, uCxHttpGetRequestPath_t * pHttpGetRequestPathRsp);
int32_t ucx_http_GetRequest(ucx_instance_t *inst, int32_t session_id);
bool ucx_http_GetGetRequestHeaderBegin(ucx_instance_t *inst, int32_t session_id, uCxHttpGetGetRequestHeader_t * pHttpGetGetRequestHeaderRsp);
int32_t ucx_http_DeleteRequest1(ucx_instance_t *inst, int32_t session_id);
int32_t ucx_http_DeleteRequest2(ucx_instance_t *inst, int32_t session_id, const char * byte_array_data, int32_t byte_array_data_len);
bool ucx_http_GetDeleteRequestHeaderBegin(ucx_instance_t *inst, int32_t session_id, uCxHttpGetDeleteRequestHeader_t * pHttpGetDeleteRequestHeaderRsp);
int32_t ucx_http_PostRequest(ucx_instance_t *inst, int32_t session_id, const uint8_t * binary_data, int32_t binary_data_len);
bool ucx_http_GetPostRequestHeaderBegin(ucx_instance_t *inst, int32_t session_id, uCxHttpGetPostRequestHeader_t * pHttpGetPostRequestHeaderRsp);
int32_t ucx_http_PutRequest(ucx_instance_t *inst, int32_t session_id, const uint8_t * binary_data, int32_t binary_data_len);
bool ucx_http_GetPutRequestHeaderBegin(ucx_instance_t *inst, int32_t session_id, uCxHttpGetPutRequestHeader_t * pHttpGetPutRequestHeaderRsp);
void ucx_http_RegisterDisconnect(ucx_instance_t *inst, uUEHTCDC_t callback);
void ucx_http_RegisterRequestStatus(ucx_instance_t *inst, uUEHTCRS_t callback);
/* ========== MQTT FUNCTIONS ========== */
int32_t ucx_mqtt_SetConnectionParams3(ucx_instance_t *inst, int32_t mqtt_id, const char * hostname, int32_t port);
int32_t ucx_mqtt_SetConnectionParams4(ucx_instance_t *inst, int32_t mqtt_id, const char * hostname, int32_t port, const char * client_id);
int32_t ucx_mqtt_SetConnectionParams5(ucx_instance_t *inst, int32_t mqtt_id, const char * hostname, int32_t port, const char * client_id, const char * username);
int32_t ucx_mqtt_SetConnectionParams6(ucx_instance_t *inst, int32_t mqtt_id, const char * hostname, int32_t port, const char * client_id, const char * username, const char * password);
bool ucx_mqtt_GetConnectionParamsBegin(ucx_instance_t *inst, int32_t mqtt_id, uCxMqttGetConnectionParams_t * pMqttGetConnectionParamsRsp);