ucx-avalonia-app/Services/UcxNativeGenerated.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_server_DescriptorDefine5(IntPtr instance, IntPtr uuid, int uuid_len, int read_security, int write_security, IntPtr value, int value_len, int max_length, out int pDescHandle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_server_ServiceActivate(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_server_ReadReqResponse(IntPtr instance, int conn_handle, IntPtr value, int value_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_server_SendNotification(IntPtr instance, int conn_handle, int char_handle, IntPtr value, int value_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_server_SendIndication(IntPtr instance, int conn_handle, int char_handle, IntPtr value, int value_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_server_SetAttrValue(IntPtr instance, int attr_handle, IntPtr value, int value_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_server_ReadReqError(IntPtr instance, int conn_handle, IntPtr error_code, int error_code_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_server_WriteReqError(IntPtr instance, int conn_handle, IntPtr error_code, int error_code_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_server_WriteReqResponse(IntPtr instance, int conn_handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_server_SendServiceChangedInd(IntPtr instance, int conn_handle, int start_handle, int end_handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_gatt_server_RegisterNotification(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_gatt_server_RegisterReadAttribute(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_gatt_server_RegisterIndicationAck(IntPtr instance, int callback);

        #endregion

        #region GENERAL Functions

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_general_Attention(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_general_GetManufacturerIdentificationBegin(IntPtr instance, [MarshalAs(UnmanagedType.LPStr)] string ppManufacturer);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_general_GetDeviceModelIdentificationBegin(IntPtr instance, [MarshalAs(UnmanagedType.LPStr)] string ppDeviceModel);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_general_GetSoftwareVersionBegin(IntPtr instance, [MarshalAs(UnmanagedType.LPStr)] string ppVersion);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_general_GetSerialNumberBegin(IntPtr instance, [MarshalAs(UnmanagedType.LPStr)] string ppSerialNumber);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_general_GetIdentInfoBegin(IntPtr instance, out int pGeneralGetIdentInfoRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_general_GetTypeCodeBegin(IntPtr instance, [MarshalAs(UnmanagedType.LPStr)] string ppTypeCode);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_general_SetGreetingText1(IntPtr instance, int greeting_mode);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_general_SetGreetingText2(IntPtr instance, int greeting_mode, [MarshalAs(UnmanagedType.LPStr)] string text);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_general_GetGreetingTextBegin(IntPtr instance, out int pGeneralGetGreetingTextRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_general_RegisterStartup(IntPtr instance, int callback);

        #endregion

        #region HTTP Functions

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_http_SetConnectionParams2(IntPtr instance, int session_id, [MarshalAs(UnmanagedType.LPStr)] string host);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_http_SetConnectionParams3(IntPtr instance, int session_id, [MarshalAs(UnmanagedType.LPStr)] string host, int port);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_http_SetTLS2(IntPtr instance, int session_id, int tls_version);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_http_SetTLS3(IntPtr instance, int session_id, int tls_version, [MarshalAs(UnmanagedType.LPStr)] string ca_name);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_http_SetTLS5(IntPtr instance, int session_id, int tls_version, [MarshalAs(UnmanagedType.LPStr)] string ca_name, [MarshalAs(UnmanagedType.LPStr)] string client_cert_name, [MarshalAs(UnmanagedType.LPStr)] string client_key_name);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_http_GetTLSBegin(IntPtr instance, int session_id, out int pHttpGetTLSRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_http_Disconnect(IntPtr instance, int session_id);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_http_GetHeader1Begin(IntPtr instance, int session_id, out int pHttpGetHeaderRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_http_GetHeader2Begin(IntPtr instance, int session_id, int data_length, out int pHttpGetHeaderRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_http_GetBody(IntPtr instance, int session_id, int data_length, out byte pDataBuf, out int pMoreToRead);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_http_AddHeaderField(IntPtr instance, int session_id, [MarshalAs(UnmanagedType.LPStr)] string field_name, [MarshalAs(UnmanagedType.LPStr)] string field_value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_http_SetCustomHeader(IntPtr instance, int session_id, [MarshalAs(UnmanagedType.LPStr)] string header_data);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_http_ClearHeaderCustom(IntPtr instance, int session_id);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_http_SetRequestPath(IntPtr instance, int session_id, [MarshalAs(UnmanagedType.LPStr)] string path);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_http_GetRequestPathBegin(IntPtr instance, int session_id, out int pHttpGetRequestPathRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_http_GetRequest(IntPtr instance, int session_id);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_http_GetGetRequestHeaderBegin(IntPtr instance, int session_id, out int pHttpGetGetRequestHeaderRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_http_DeleteRequest1(IntPtr instance, int session_id);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_http_DeleteRequest2(IntPtr instance, int session_id, [MarshalAs(UnmanagedType.LPStr)] string byte_array_data, int byte_array_data_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_http_GetDeleteRequestHeaderBegin(IntPtr instance, int session_id, out int pHttpGetDeleteRequestHeaderRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_http_PostRequest(IntPtr instance, int session_id, IntPtr binary_data, int binary_data_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_http_GetPostRequestHeaderBegin(IntPtr instance, int session_id, out int pHttpGetPostRequestHeaderRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_http_PutRequest(IntPtr instance, int session_id, IntPtr binary_data, int binary_data_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_http_GetPutRequestHeaderBegin(IntPtr instance, int session_id, out int pHttpGetPutRequestHeaderRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_http_RegisterDisconnect(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_http_RegisterRequestStatus(IntPtr instance, int callback);

        #endregion

        #region MQTT Functions

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_mqtt_SetConnectionParams3(IntPtr instance, int mqtt_id, [MarshalAs(UnmanagedType.LPStr)] string hostname, int port);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_mqtt_SetConnectionParams4(IntPtr instance, int mqtt_id, [MarshalAs(UnmanagedType.LPStr)] string hostname, int port, [MarshalAs(UnmanagedType.LPStr)] string client_id);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_mqtt_SetConnectionParams5(IntPtr instance, int mqtt_id, [MarshalAs(UnmanagedType.LPStr)] string hostname, int port, [MarshalAs(UnmanagedType.LPStr)] string client_id, [MarshalAs(UnmanagedType.LPStr)] string username);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_mqtt_SetConnectionParams6(IntPtr instance, int mqtt_id, [MarshalAs(UnmanagedType.LPStr)] string hostname, int port, [MarshalAs(UnmanagedType.LPStr)] string client_id, [MarshalAs(UnmanagedType.LPStr)] string username, [MarshalAs(UnmanagedType.LPStr)] string password);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_mqtt_GetConnectionParamsBegin(IntPtr instance, int mqtt_id, out int pMqttGetConnectionParamsRsp);
